WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201552
AX: Navigating through long list of radio buttons doesn't scroll the page
https://bugs.webkit.org/show_bug.cgi?id=201552
Summary
AX: Navigating through long list of radio buttons doesn't scroll the page
Diane Ko
Reported
2019-09-06 11:47:57 PDT
When navigating by keyboard on a long list of radio buttons, Safari does not scroll the viewport with radio button focus. This makes it difficult, if not impossible, to select the right radio button from a long list. Steps to reproduce: 1. Go to a page with several radio buttons (ex:
https://codepen.io/backwardok/pen/mdbpovw
) 2. Tab to get into the radio button group 3. Press the down or right arrow key to move through the options What's expected: When a radio button that's out of view gets focus, the page scrolls that element into view What happens: When a radio button that's out of view gets focus, the page doesn't scroll. Because radio buttons accept pressing the down arrow to move through the list, scrolling up or down is only possible when at the beginning or the end of the list, making it impossible to accurately select an element in the middle of a long list.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-06 11:48:14 PDT
<
rdar://problem/55121458
>
Rahim Abdi
Comment 2
2025-07-11 20:04:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47931
EWS
Comment 3
2025-08-22 15:22:12 PDT
Committed
299075@main
(08182390fd9f): <
https://commits.webkit.org/299075@main
> Reviewed commits have been landed. Closing PR #47931 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug