AX: Scroll <input type=radio> into viewport when keyboard-focused and off-screen https://bugs.webkit.org/show_bug.cgi?id=201552 rdar://problem/55121458

Reviewed by Tyler Wilcock.

If a radio button is focused/selected via arrow key navigation (e.g., Down arrow key), it should always
be visible to the user. This PR ensures that focused, off-screen radio buttons get scrolled into view.

* Source/WebCore/html/RadioInputType.cpp:
(WebCore::RadioInputType::handleKeydownEvent):

Canonical link: https://commits.webkit.org/299075@main