Source/WebCore/html/RadioInputType.cpp
@@ -158,6 +158,8 @@ auto RadioInputType::handleKeydownEvent(KeyboardEvent& event) -> ShouldCallBaseE
             break;
         if (inputElement->isRadioButton() && inputElement->name() == element->name() && inputElement->isFocusable()) {
             inputElement->protectedDocument()->setFocusedElement(inputElement.get());
+            // If the focused radio button is not visible (e.g., during arrow key navigation), scroll it into view.
+            inputElement->scrollIntoViewIfNotVisible(false);
             inputElement->dispatchSimulatedClick(&event, SendNoEvents, DoNotShowPressedLook);
             event.setDefaultHandled();
             return ShouldCallBaseEventHandler::Yes;
